# LabWork8

Task1/: CMakeLists.txt  algorithms.cpp  binary.cpp  main.cpp  product.cpp  product.h  product_functions.cpp  product_functions.h
Task2/: CMakeLists.txt  algorithm.cpp  database.cpp  item.cpp  item.h  item_functions.cpp  item_functions.h  main.cpp
